# A-Step-Forward

./: .editorconfig  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  BLOCKED.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MEMORY_SNAPSHOT.md  Makefile  PLAN.md  README.md  SECURITY.md  cliff.toml  commit_msg.txt  gen_bio_lessons.py  gen_update_index.py  package.json  pnpm-lock.yaml  pyproject.toml  render.yaml  test-groq.mjs  write_canvas.py  write_canvas_utf8.py
.cursor/: hooks.json  mcp.json
.deepeval/: .deepeval_telemetry.txt
.github/: dependabot.yml
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/core/: audit.py  auth.py  db.py  exception_handlers.py  rate_limit.py  rbac.py  settings.py  telemetry.py
apps/api/app/routers/: admin.py  agents.py  assessment.py  bookings.py  chat.py  content.py  diagnostic.py  graphrag.py  health.py  learners.py  learning_path.py  lessons.py  memory.py  memory_admin.py  onboarding.py  progress.py  search.py
apps/api/app/services/: curriculum.py  learner.py  progress_svc.py
apps/api/app/stores/: __init__.py  audit_store.py  content_store.py  models.py
apps/api/tests/: conftest.py  fake_memory.py  test_auth_clerk.py  test_content.py  test_integration.py  test_learning_path.py  test_lessons.py  test_security.py
content/: concept-wikipedia-overrides.yaml  external-resources.yaml
docs/: bagrut-math-depth.md  sprint.md
evals/: package.json  promptfoo_local.py  report.md  results.json  runner.py
infra/: alembic.ini  docker-compose.yml  otel-collector.yaml
mcp-servers/curriculum/: README.md  pyproject.toml
mcp-servers/curriculum/src/curriculum_mcp/: __init__.py  errors.py  server.py
mcp-servers/curriculum/src/curriculum_mcp/tools/: __init__.py  curriculum.py
mcp-servers/curriculum/tests/: conftest.py  test_server.py
mcp-servers/graphrag/: README.md  pyproject.toml
mcp-servers/graphrag/src/graphrag_mcp/: __init__.py  errors.py  server.py
mcp-servers/graphrag/src/graphrag_mcp/tools/: __init__.py  kg.py
mcp-servers/graphrag/tests/: conftest.py  test_server.py
mcp-servers/memory/: README.md  pyproject.toml
mcp-servers/memory/src/memory_mcp/: __init__.py  errors.py  server.py
mcp-servers/memory/src/memory_mcp/tools/: __init__.py  memory.py
mcp-servers/memory/tests/: conftest.py  test_server.py
mcp-servers/progress/: README.md  pyproject.toml
mcp-servers/progress/src/progress_mcp/: __init__.py  facade.py  server.py
mcp-servers/progress/src/progress_mcp/tools/: __init__.py  progress.py
mcp-servers/progress/tests/: conftest.py  test_server.py
scripts/: README.md  _audit_lessons_full.py  _hebrew_section_translations.json  _scan_all_hebrew.py  _scan_hebrew_gaps.py  _stats_makhina_part2.py  add-analytic-geo-5pt-questions.js  asf_curriculum.py  audit-content.mjs  audit-lesson-depth.mjs  audit-lessons.mjs  author_physics1_lessons.py  author_physics2_lessons.py  backfill-diagnostic-he.mjs  backfill-question-levels.mjs  build-kg-json.mjs  build_graphrag_prs.ps1  check_latex_escaping.py  editorial-pass.mjs  enrich-all-lessons.mjs  enrich-lessons.mjs  expand-lessons-substantive.mjs  export_seed_lessons.py  fix-artifacts-final.py  fix-artifacts-v3.py  fix-corrupted-hebrew.mjs  fix-deriv-hebrew.js  fix-eigenvalues-he.js  fix-he-artifacts-v2.py  fix-he-artifacts.py  fix-hebrew-content.mjs  fix-hebrew.js  fix-la-determinants.js  (+52 more)
services/curriculum/: pyproject.toml
services/curriculum/curriculum_service/: __init__.py  api.py  default_service.py  settings.py
services/curriculum/curriculum_service/stores/: __init__.py  database.py  models.py  repository.py
services/curriculum/tests/: test_smoke.py
services/graphrag/: __init__.py  pyproject.toml  retrieval.py
services/graphrag/fixtures/seed_corpus/: fractions.md
services/graphrag/graphrag_service/: __init__.py  api.py  default_service.py  neo4j_service.py  settings.py
services/graphrag/graphrag_service/ingest/: __init__.py  chunker.py  embedder.py  extractor.py  pipeline.py  resolver.py  snapshot.py  types.py  verifier.py  writer.py
services/graphrag/graphrag_service/ingest/sources/: __init__.py  html.py  markdown.py  pdf.py  transcript.py
services/graphrag/graphrag_service/ontology/: __init__.py  schema.py
services/graphrag/graphrag_service/retrieval/: __init__.py  queries.py
services/graphrag/graphrag_service/stores/: __init__.py  chunk_repository.py  neo4j_store.py
services/graphrag/scripts/: apply_schema.py  ingest_seed.py
services/graphrag/tests/: conftest.py  test_chunker.py  test_ontology.py  test_pipeline.py  test_smoke.py
services/learning_path/: pyproject.toml
services/learning_path/learning_path_service/: __init__.py  api.py  engine.py  postgres_service.py  quiz_generator.py  settings.py
services/learning_path/learning_path_service/stores/: database.py  models.py  quiz_repository.py  repository.py
services/learning_path/tests/: test_engine.py  test_quiz.py
services/memory/: pyproject.toml
services/memory/memory_service/: __init__.py  api.py  default_service.py  event_writer.py  settings.py
services/memory/memory_service/hygiene/: __init__.py  audit.py  child_mode.py  compaction.py  compression.py  conflict_resolution.py  consolidation.py  decay.py  dreaming.py  importance.py  llm_helper.py  pii.py  selective_forgetting.py  text_similarity.py  verification.py
services/memory/memory_service/retrieval/: __init__.py  hybrid.py  policy.py
services/memory/memory_service/stores/: __init__.py  database.py  mappers.py  models.py  repository.py  type_repositories.py
services/memory/tests/: test_hygiene.py  test_mappers.py  test_pii.py  test_smoke.py  test_stores.py
services/orchestrator/: pyproject.toml
services/orchestrator/orchestrator/: __init__.py  episodic.py  graph.py  invoke.py  router.py  runner.py
services/orchestrator/tests/: test_phase2_smoke.py  test_phase3_smoke.py  test_smoke.py
services/workers/: pyproject.toml
services/workers/workers/: celery_app.py
services/workers/workers/jobs/: decay.py  dreaming.py  kg_ingest.py  run_util.py
(+784 files in other folders)
