[project]
name = "a-step-forward"
version = "0.1.0"
description = "A Step Forward — monorepo root (dev tooling, migrations, CI)."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13",
  "asyncpg>=0.29",
  "pgvector>=0.3",
  "sqlalchemy>=2.0.30",
  "pyyaml>=6.0",
  "celery>=5.4",
  "memory-service",
  "curriculum-service",
  "asf-api",
]

[dependency-groups]
dev = [
  "ruff>=0.6",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "mypy>=1.11",
  "types-redis",
]
ingest = [
  "pdfplumber>=0.11",
  "pymupdf>=1.24",
  "watchdog>=4.0",
  "boto3>=1.34",
]

[tool.uv.workspace]
members = [
  "apps/api",
  "packages/agents",
  "packages/schemas",
  "services/memory",
  "services/graphrag",
  "services/orchestrator",
  "services/curriculum",
  "services/learner_model",
  "services/diagnostic",
  "services/learning_path",
  "services/workers",
  "mcp-servers/memory",
  "mcp-servers/graphrag",
  "mcp-servers/curriculum",
  "mcp-servers/progress",
]

[tool.uv.sources]
memory-service = { workspace = true }
curriculum-service = { workspace = true }
asf-api = { workspace = true }

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
  ".venv",
  "node_modules",
  "apps/web/.next",
  # Phase 0: sub-agents enable per-package lint as they ship; infra gate stays narrow.
  "apps",
  "services",
  "packages",
  "mcp-servers",
  "evals",
  "prompts",
  # Content-generation one-shot scripts; not production code.
  "scripts",
  "research",
  "write_canvas.py",
  "write_canvas_utf8.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["B008"]

[tool.ruff.format]
exclude = ["scripts/**"]

[tool.ruff.lint.per-file-ignores]
"infra/alembic/env.py" = ["E402"]
"infra/alembic/versions/*.py" = ["E501", "UP007", "UP035", "I001"]
"scripts/**" = ["E401", "E402", "E501", "E741", "F401", "F541", "F601", "F811", "F841", "I001", "B", "RUF001", "RUF002", "RUF003", "RUF100", "RUF021", "UP"]
"**/tests/**" = ["S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = [
  "packages/schemas",
  "services/memory",
  "services/graphrag",
  "services/orchestrator",
  "services/curriculum",
  "services/learner_model",
  "packages/agents",
  "apps/api",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true
files = ["infra/alembic/env.py", "tests"]
