[project]
name = "asf-api"
version = "0.1.0"
description = "FastAPI gateway for A Step Forward."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "httpx>=0.27",
  "structlog>=24.1",
  "python-jose[cryptography]>=3.3",
  "redis>=5.0",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "prometheus-client>=0.20",
  "sentry-sdk[fastapi]>=2.0",
  "opentelemetry-api>=1.27",
  "opentelemetry-sdk>=1.27",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "opentelemetry-exporter-otlp-proto-http>=1.27",
  "schemas",
  "memory-service",
  "curriculum-service",
  "graphrag-service",
  "agents",
  "orchestrator",
  "learner-model-service",
  "diagnostic-service",
  "learning-path-service",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
]

[tool.uv.sources]
schemas = { workspace = true }
memory-service = { workspace = true }
curriculum-service = { workspace = true }
graphrag-service = { workspace = true }
agents = { workspace = true }
orchestrator = { workspace = true }
learner-model-service = { workspace = true }
diagnostic-service = { workspace = true }
learning-path-service = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
