[project]
name = "curriculum-mcp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["mcp>=1.0", "pydantic>=2.7", "schemas", "curriculum-service"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[tool.uv.sources]
schemas = { path = "../../packages/schemas", editable = true }
curriculum-service = { path = "../../services/curriculum", editable = true }

[project.scripts]
curriculum-mcp = "curriculum_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/curriculum_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
