[project]
name = "graphrag-mcp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["mcp>=1.0", "pydantic>=2.7", "schemas", "graphrag-service"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[tool.uv.sources]
schemas = { path = "../../packages/schemas", editable = true }
graphrag-service = { path = "../../services/graphrag", editable = true }

[project.scripts]
graphrag-mcp = "graphrag_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/graphrag_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
