[project]
name = "memory-mcp"
version = "0.1.0"
description = "MCP server exposing the Memory Service."
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.0",
  "pydantic>=2.7",
  "schemas",
  "memory-service",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[tool.uv.sources]
schemas = { path = "../../packages/schemas", editable = true }
memory-service = { path = "../../services/memory", editable = true }

[project.scripts]
memory-mcp = "memory_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memory_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
