[project]
name = "curriculum-service"
version = "0.1.0"
description = "Curriculum store and retrieval for A Step Forward."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "sqlalchemy>=2.0.30",
  "asyncpg>=0.29",
  "structlog>=24.1",
  "schemas",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
]

[tool.uv.sources]
schemas = { path = "../../packages/schemas", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["curriculum_service"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
