[project]
name = "learning-path-service"
version = "0.1.0"
description = "Weekly learning plan engine and quiz adaptation for A Step Forward."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29",
  "structlog>=24.1",
  "schemas",
  "learner-model-service",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
]

[tool.uv.sources]
schemas = { workspace = true }
learner-model-service = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["learning_path_service"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
