[project]
name = "memory-service"
version = "0.1.0"
description = "Multi-type, self-healing memory service for A Step Forward."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "sqlalchemy>=2.0.30",
  "asyncpg>=0.29",
  "psycopg[binary]>=3.1",
  "pgvector>=0.3",
  "redis>=5.0",
  "structlog>=24.1",
  "httpx>=0.27",
  "tenacity>=8.3",
  "tiktoken>=0.7",
  "schemas",
]

[project.optional-dependencies]
presidio = [
  "presidio-analyzer>=2.2",
  "presidio-anonymizer>=2.2",
]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
]

[tool.uv.sources]
schemas = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["memory_service"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
