[project]
name = "orchestrator"
version = "0.1.0"
description = "LangGraph-based agent orchestrator for A Step Forward."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "langgraph>=0.2",
  "structlog>=24.1",
  "schemas",
  "agents",
  "memory-service",
  "graphrag-service",
]

[tool.uv.sources]
schemas = { path = "../../packages/schemas", editable = true }
agents = { path = "../../packages/agents", editable = true }
memory-service = { path = "../memory", editable = true }
graphrag-service = { path = "../graphrag", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orchestrator"]
