[project]
name = "workers"
version = "0.1.0"
description = "Background workers: dreaming, decay sweep, KG ingestion, evals."
requires-python = ">=3.11"
dependencies = [
  "celery[redis]>=5.4",
  "structlog>=24.1",
  "schemas",
  "memory-service",
  "graphrag-service",
]

[tool.uv.sources]
schemas = { path = "../../packages/schemas", editable = true }
memory-service = { path = "../memory", editable = true }
graphrag-service = { path = "../graphrag", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["workers"]
